--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             </canvas>
 
         </div>
+        <script type="text/javascript" src="js/Block.js"></script>
 
-        <script type="text/javascript" src="js/draw.js"></script>
+        <script type="text/javascript" src="js/Snake.js"></script>
+
+        <script type="text/javascript" src="js/Game.js"></script>
 
     </div>
 
