gestion hors ecran

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="boutonsSimuleFenetre" id="reduire"><img class="iconSimuleFenetre" src="./images/reduire.png"></div>
                                                           
             </div>
-            <canvas id="canvas">
+            <canvas id="canvas" width="500" height="500">
 
 
             </canvas>
