--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 
         </div>
         <script type="text/javascript" src="js/Block.js"></script>
-
+        <script type="text/javascript" src="js/Faille.js"></script>
         <script type="text/javascript" src="js/Snake.js"></script>
 
         <script type="text/javascript" src="js/Game.js"></script>
+
+
 
     </div>
 
